# Project_MS_0

./: CMakeLists.txt  Github Repo.txt  LED copy.c  led.c  led.h  main.c
Drivers/Buzzer/: Buzzer.c  Buzzer.h
Drivers/GPS/: gps.c  gps.h
Drivers/GSM/: gsm.c  gsm.h
Drivers/LED/: led.c  led.h
Drivers/Motor/: motor.c  motor.h
Drivers/Vibration/: vibration.c  vibration.h
Test/: Test.c
Wifi/: wifi.c  wifi.h
config/: FreeRTOSConfig.h
